--- a/meteor-app/client/layout/layout.scss
+++ b/meteor-app/client/layout/layout.scss
@@ -110,7 +110,6 @@ hr{
   margin: 0 0.4em;
 }
 
-
 .loading {
   display: flex;
   align-items: center;
@@ -121,4 +120,9 @@ hr{
 .loading__text {
   max-width: 50%;
   font-size: 1.5rem;
+}
+
+.scroll--vertical-only {
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
 }
